force-app/main/default/objects/Investor__c/fields/Investor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Investor_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Investor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Investors</relationshipLabel>
    <relationshipName>Investors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>