force-app/main/default/objects/Investor__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Investor&apos;s Name</description>
    <label>Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>