force-app/main/default/objects/Investor__c/fields/Portfolio_Value__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Value__c</fullName>
    <label>Portfolio Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>