force-app/main/default/objects/Investor__c/fields/Total_Investmen__c.field-meta.xml
<CustomField>
    <fullName>Total_Investmen__c</fullName>
    <label>Total Investment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>